[package]
name = "json_diff_rs"
description = "JSON Diff for Rust"
version = "0.0.3"
license = "MIT"
edition = "2021"
documentation = "https://docs.rs/json_diff_rs"
repository = "https://github.com/amanbolat/json_diff_rs"
keywords = ["diff", "json", "serde", "serde_json"]

[dependencies]
approx = "0.5.1"
chrono = "0.4.38"
clap = { version = "4", features = ["derive"], optional = true }
derive_builder = "0.20.2"
nom = "7.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "1", optional = true }

[dev-dependencies]
insta = "1.28.0"

[features]
cli = ["clap", "thiserror"]
